# WebGPU-Playground

./: .gitignore  .gitmodules  README.md
Docs/: GTX1060-GPUAdapter.limits.out  NVIDIA-CUDA.md  WGSL-forDummies.md  WebGPU-For-Dummies.html  WebGPU-forDummies.md
Examples/: 00-Initialize-WebGPU.js  01-Binding.js  02-Access-Memory.js  03-MatMult.js  04-Atomic.js  05-Complex.js  06-UniformBuffers.js  07-Pipelined.js  08-Pipeline-Reuse.js  09-Timing.js  index.html
Examples/00-Initialize-WebGPU/: 00-Initialize-WebGPU.js  index.html
Examples/01-Binding/: 01-Binding.js  index.html
Examples/02-Access-Memory/: 02-Access-Memory.js  index.html
Examples/03-MatMult/: index.html
Examples/04-Atomic/: index.html
Examples/05-Complex/: 05-Complex.js  index.html
Examples/06-UniformBuffers/: 06-UniformBuffers.js  index.html
Examples/07-Pipelined/: 07-Pipelined.js
Examples/08-Pipeline-Reuse/: index.html
Examples/09-Timing/: 09-Timing.js
Examples/10-f16/: 10-f16.js  index.html
Examples/11-Cross-platform-WebGPU/: CMakeLists.txt  README.md  main-another-way.cpp  main.cpp
Examples/12-Cross-platform-WebGPU-Compute/: CMakeLists.txt  README.md  index.html  matmult.cpp
Examples/13-Get-Dawn-Info/: CMakeLists.txt  DawnQuery.cpp  README.md
Examples/14-WebGPU-Torch/: README.md  benchmark.js  benchmarks.json  index.html  results.json  torch.js
